[package]
name = "test-parachain-adder-collator"
version = "0.9.9"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Collator for the adder test parachain"
edition = "2018"

[[bin]]
name = "adder-collator"
path = "src/main.rs"

[[bin]]
name = "adder_collator_puppet_worker"
path = "bin/puppet_worker.rs"

[dependencies]
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
futures = "0.3.17"
futures-timer = "3.0.2"
log = "0.4.13"
structopt = "0.3.23"

test-parachain-adder = { path = ".." }
diamond-primitives = { path = "../../../../primitives" }
diamond-cli = { path = "../../../../cli" }
diamond-service = { path = "../../../../node/service", features = ["titan-native"] }
diamond-node-primitives = { path = "../../../../node/primitives" }
diamond-node-subsystem = { path = "../../../../node/subsystem" }

sc-cli = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "master" }

# This one is tricky. Even though it is not used directly by the collator, we still need it for the
# `puppet_worker` binary, which is required for the integration test. However, this shouldn't be
# a big problem since it is used transitively anyway.
diamond-node-core-pvf = { path = "../../../../node/core/pvf" }

[dev-dependencies]
diamond-parachain = { path = "../../.." }
diamond-test-service = { path = "../../../../node/test/service" }

substrate-test-utils = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "master" }

tokio = { version = "1.11", features = ["macros"] }
